--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.springmvcdemo</groupId>
-  <artifactId>HelloWorld</artifactId>
+  <artifactId>springmvc</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>springmvc Maven Webapp</name>
@@ -31,7 +31,7 @@
 	</dependencies>
 	  
   <build>
-		<finalName>HelloWorld</finalName>
+		<finalName>springmvc</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -49,7 +49,7 @@
 					<version>2.4</version>
 					<configuration>
 						<warSourceDirectory>src/main/webapp</warSourceDirectory>
-						<warName>helloworld</warName>
+						<warName>springmvc</warName>
 						<failOnMissingWebXml>false</failOnMissingWebXml>
 					</configuration>
 				</plugin>
@@ -60,7 +60,7 @@
 					    <configuration>
 					        <!-- <url>http://localhost:8080/manager/text</url>
 					        <server>TomcatServer</server>-->
-					        <path>/helloworld</path>
+					        <path>/springmvc</path>
 					    </configuration>
 				</plugin> 				
 			</plugins>
