--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <properties>
 		<java-version>1.7</java-version>
 		<org.springframework-version>4.3.0.RELEASE</org.springframework-version>
+		<jackson.library>2.7.5</jackson.library>
   </properties>
   <dependencies>
 		<dependency>
@@ -28,6 +29,11 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>${jackson.library}</version>
+		</dependency>		
 	</dependencies>
 	  
   <build>
